# Renjulibviewer_v2

./: .gitignore  Cargo.toml  LICENSE  OFL.txt  README.md  build.rs  index.html  manifest.json
src/: board.rs  exportkifu.rs  lang.rs  main.rs  setting.rs
src/core/: hash_board.rs  mod.rs  node.rs  zobrist.rs
src/io/: mod.rs  parser.rs  writer.rs
src/ui/: board.rs  dialogs.rs  mod.rs  panel.rs  toolbar.rs
src/vcf/: blackforbiddenmove.rs  mod.rs  model.rs  solver.rs
